--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <body>
   <main class="personagens">
    <div class="personagem">
-    <img class="imagem" src="/assets/ghost.webp" alt="Personagem Black Bird" />
+    <img class="imagem" src="/assets/ghost (2).jpg" alt="Personagem Ghost" />
     <div class="conteudo">
      <i class="logo"></i>
      <h2 class="nome-personagem">Ghost</h2>
@@ -34,7 +34,7 @@
     <img
      class="imagem"
      src="./assets/logoprice.jpg"
-     alt="Personagem Green Phoenix"
+     alt="Personagem Capitão Price"
     />
     <div class="conteudo">
      <i class="logo"></i>
@@ -45,7 +45,7 @@
    </div>
 
    <div class="personagem">
-    <img class="imagem" src="/assets/reaper.webp" alt="Personagem Redtooth" />
+    <img class="imagem" src="/assets/reaper.jpg" alt="Personagem Reaper" />
     <div class="conteudo">
      <i class="logo"></i>
      <h2 class="nome-personagem">Reaper</h2>
@@ -59,12 +59,12 @@
     <img
      class="imagem"
      src="./assets/logoantonov.jpg"
-     alt="Personagem Shadow Killer"
+     alt="Personagem Antonov"
     />
     <div class="conteudo">
      <i class="logo"></i>
      <h2 class="nome-personagem">Antonov</h2>
-     <p class="descricao">
+     <p class="descricao">Um soldado altamente treinado para combates à curta e média distância, mestre em armas de curto alcance
       
     </div>
    </div>
@@ -72,8 +72,8 @@
    <div class="personagem">
     <img
      class="imagem"
-     src="./assets/logoshep.jfif"
-     alt="Personagem Shimen"
+     src="./assets/logoshep.jpg"
+     alt="Personagem General Shepherd"
     />
     <div class="conteudo">
      <i class="logo"></i>
@@ -87,8 +87,8 @@
    <div class="personagem">
     <img
      class="imagem"
-     src="./assets/logogunzo.avif"
-     alt="Personagem Manjusaka"
+     src="./assets/logogunzo.jpg"
+     alt="Personagem Gunzo"
     />
     <div class="conteudo">
      <i class="logo"></i>
@@ -102,8 +102,8 @@
    <div class="personagem">
     <img
      class="imagem"
-     src="./assets/logowoods.webp"
-     alt="Personagem Raposa Branca"
+     src="./assets/logowoods.jpg"
+     alt="Personagem Capitão Woods"
     />
     <div class="conteudo">
      <i class="logo"></i>
@@ -116,37 +116,37 @@
   <ul class="botoes">
    <li>
     <button class="botao">
-     <img src="/assets/ghost2.jfif" alt="Icon Ghost" />
+     <img src="/assets/ghost2.jpg" alt="Icon Ghost" />
     </button>
    </li>
    <li>
     <button class="botao">
-     <img src="./assets/price.jfif" alt="Icon Green Phoenix" />
+     <img src="./assets/price.jpg" alt="Icon Price" />
     </button>
    </li>
    <li>
     <button class="botao">
-     <img src="./assets/logoreaper.webp" alt="Icon Redtooth" />
+     <img src="./assets/logoreaper.jpg" alt="Icon Reaper" />
     </button>
    </li>
    <li>
     <button class="botao selecionado">
-     <img src="./assets/antonov.jfif" alt="Icon Shadow Killer" />
+     <img src="./assets/antonov.jpg" alt="Icon Antonov" />
     </button>
    </li>
    <li>
     <button class="botao">
-     <img src="./assets/shepherd.jfif" alt="Icon Shimen" />
+     <img src="./assets/shepherd.jpg" alt="Icon Sherperd" />
     </button>
    </li>
    <li>
     <button class="botao">
-     <img src="./assets/gunzo.jfif" alt="Icon Manjusaka" />
+     <img src="./assets/gunzo.jpg" alt="Icon Gunzo" />
     </button>
    </li>
    <li>
     <button class="botao">
-     <img src="./assets/woods.webp" alt="Icon Raposa Branca" />
+     <img src="./assets/woods.jpg" alt="Icon Woods" />
     </button>
    </li>
   </ul>
